<resources>
    <string name="app_name">El. odečty</string>
    <string name="hdo_service_name">Čas HDO</string>
    <string name="holiday">SVÁTEK</string>
    <string name="toggle_hdo_view_mode">Přepnout zobrazení HDO</string>
    <string name="show_as_graphic">Grafické zobrazení</string>
    <string name="show_as_list">Seznamové zobrazení</string>
    <string name="weekdays">Všední dny</string>
    <string name="weekend">Víkend</string>
    <string name="hdo_click">Klikněte pro spuštění služby hlídání HDO</string>
    <string name="default_web_client_id">634320309725-9a1qp280hkm6a2bsqip9l6t4epdm65lp.apps.googleusercontent.com</string>
    <string name="no_data_available">Není dostatek dat pro zobrazení grafu</string>
    <string name="graph_legend_vt">VT spotřeba (%s)</string>
    <string name="graph_legend_nt">NT spotřeba (%s)</string>
    <string name="graph_legend_fixed_cost">Fixní měsíční náklady</string>
    <string name="detail_title_year">Přehled za rok %1$d</string>
    <string name="datum_cislem">01.01.2025</string>
    <string name="pomlka">-</string>
    <string name="no_date">XX.XX.XXXX</string>
    <string name="platnost_cenik">Platnost OD - DO</string>
    <string name="dodavatel">Dodavatel</string>
    <string name="produkt">Produkt (Jméno sazby)</string>
    <string name="distribucni_uzemi">Distribuční území</string>
    <string name="produktova_rada">Produktová řada (Jméno ceníku)</string>
    <string name="nuly">000.0</string>
    <string name="nt">NT</string>
    <string name="neregul_nt">Neregulovaná cena NT</string>
    <string name="regul_nt">Regulovaná cena NT</string>
    <string name="nt2">NT:</string>
    <string name="nt3">NÍZKÝ TARIF</string>
    <string name="vt">VT</string>
    <string name="polozka">Položka</string>
    <string name="neregul_vt">Neregulovaná cena VT</string>
    <string name="regul_vt">Regulovaná cena VT</string>
    <string name="vt2">VT:</string>
    <string name="vt3">VYSOKÝ TARIF</string>
    <string name="mesicni_plat">Stálý měsíční plat:</string>
    <string name="mesicni_plat2">Stálý měsíční plat</string>
    <string name="dan_elektriny">Daň z elektřiny</string>
    <string name="rozdil">Rozdíl</string>
    <string name="other_services">Ostatní služby(+)/slevy(-) v ceníku nezahrnuté:</string>
    <string name="cena_za_dodavku">Cena za dodávku elektřiny (neregulovaná)</string>
    <string name="cena_za_distribuci">Cena za zajištění distribuce elektřiny (regulovaná)</string>
    <string name="sazba_distribuce">Sazba dist.</string>
    <string name="mesicni_plat_za_prikon">Měsíční plat v Kč za příkon dle hodnoty hlavního jističe</string>
    <string name="mesicni_plat_za_jistic">Měsíční plat za jistič</string>
    <string name="jistic_do_10">Jistič do 3x10A a do 1x25A včetně</string>
    <string name="jistic_nad_10">Jistič nad 3x10A a do 3x16A včetně</string>
    <string name="jistic_nad_16">Jistič nad 3x16A a do 3x20A včetně</string>
    <string name="jistic_nad_20">Jistič nad 3x20A a do 3x25A včetně</string>
    <string name="jistic_nad_25">Jistič nad 3x25A a do 3x32A včetně</string>
    <string name="jistic_nad_32">Jistič nad 3x32A a do 3x40A včetně</string>
    <string name="jistic_nad_40">Jistič nad 3x40A a do 3x50A včetně</string>
    <string name="jistic_nad_50">Jistič nad 3x50A a do 3x63A včetně</string>
    <string name="jistic_nad_63">Jistič nad 3x63A a do 3x80A včetně</string>
    <string name="jistic_nad_80">Jistič nad 3x80A a do 3x100A včetně</string>
    <string name="jistic_nad_100">Jistič nad 3x100A a do 3x125A včetně</string>
    <string name="jistic_nad_125">Jistič nad 3x125A a do 3x160A včetně</string>
    <string name="jistic_nad_160">Jistič nad 3x160A za A</string>
    <string name="jistic_nad_63_za_A">Jistič nad 3x63A za A</string>
    <string name="jistic_nad_25_za_A">Jistič nad 1x25A za A</string>
    <string name="cena_za_ostatni_regulovane_sluzby">Cena za ostatní regulované služby</string>
    <string name="systemove_sluzby">Systémové služby</string>
    <string name="podpora_vykupu_el_z_oze_kvet_a_dz">Podpora výkupu el. z OZE, KVET a DZ</string>
    <string name="poze_dle_spotreby">POZE [kč/MWh]</string>
    <string name="poze_dle_jistice">POZE [kč/A/měs.]</string>
    <string name="mwh">&#160;MWh</string>
    <string name="mes">&#160;měs.</string>
    <string name="cinnost_ote">Činnost OTE</string>
    <string name="cinnost_operatora_trhu">Čin. oper. trhu</string>
    <string name="provoz_nesitove_infrastruktury">Provoz nesíťové infr.</string>
    <string name="provoz_nesitove_infrastruktury_poznamka">Od 1.7. se tato položka změnila. Nyní je cena 9,24.  </string>
    <string name="nova_cena_infrastruktua_poznamka">Od 1.9. se tato položka zvýšila na 12,45.  </string>
    <string name="dph">DPH</string>
    <string name="dan_z_elektriny">Daň z elektřiny</string>
    <string name="zobrazeno_mene">Zobrazeno méně hodnot jističů</string>
    <string name="zobrazeno_vice">Zobrazeno více hodnot jističů</string>
    <string name="dane">Daně</string>
    <string name="celkem_vt">Celková cena VT</string>
    <string name="celkem_nt">Celková cena NT</string>
    <string name="mesicni_platy">Měsíční platy</string>
    <string name="celkem_bez_dph">CELKEM (bez DPH)</string>
    <string name="celkem_s_dph">CELKEM (s DPH)</string>
    <string name="celkem">Celkem</string>
    <string name="meric">Měřič</string>
    <string name="ulozit">Uložit</string>
    <string name="zpet">Zpět</string>
    <string name="add">Přidat</string>
    <string name="vybrat">Vybrat</string>
    <string name="label_for">Label for:</string>
    <string name="label_price_detail">Detail</string>
    <string name="label_item">Item</string>
    <string name="price_list_item_label">%1$s, %2$s</string>
    <string name="description_date_from">Platnost od</string>
    <string name="description_date_until">Platnost do</string>
    <string name="validity_price_list_date">Platnost ceníku: %s - %s</string>
    <string name="sp_produktova_rada">Produktová řada</string>
    <string name="sp_datum_platnosti">Datum platnosti</string>
    <string name="sp_distribucni_uzemí">Distribuční území</string>
    <string name="sp_dodavatele">Dodavatele</string>
    <string name="sp_produkt">Produkt</string>
    <string name="filtr_ceniku">Filtr ceníků</string>
    <string name="filtr_nastav">Nastav filtr</string>
    <string name="zrusit">Zrušit</string>
    <string name="filtr_reset">Resetovat všechny filtry</string>
    <string name="kc_mesic">Kč/měsíc</string>
    <string name="kc_MWh">Kč/MWh</string>
    <string name="kc_1A">Kč za 1A/měsíc</string>
    <string name="kc_om">Kč za OM/měsíc</string>
    <string name="procent">%</string>
    <string name="jednotkova_cena">Jednotková cena</string>
    <string name="jed_cena">Jed. cena</string>
    <string name="delete_unused_pricelist">Smazat nepoužité ceníky?</string>
    <string name="delete_unused_pricelist_content">Touto akcí nevratně smažete všechny ceníky, které nejsou použity v měsíčních odečtech, ani ve fakturách.</string>
    <string name="ano">ANO</string>
    <string name="ne">NE</string>
    <string name="hdo_restart_notification_title">HDO služba po restartu čeká na zapnutí</string>
    <string name="hdo_restart_notification_message">Po restartu se služba HDO nespustí automaticky. Klepněte sem a v aplikaci bude přepínač připravený k zapnutí.</string>
    <string name="pocet_ceniku">Počet uložených/zobrazených ceníků: %d/%d</string>
    <string name="poznamka_2022">Od října do konce roku je zrušen POZE</string>
    <string name="poznamka_2023">Na ceník se vztahuje cenový strop VT, NT a zrušení POZE</string>
    <string name="x">X</string>
    <string name="faze_x_prikon">Fáze x příkon:</string>
    <string name="jmeno_odberneho_mista">Jméno odběrného místa:</string>
    <string name="jmeno_odberneho_mista_notification">Jméno odběrného místa pro notifikace</string>
    <string name="popis">Popis (poznámka) odběrného místa:</string>
    <string name="pocet_fazi">Počet fází:</string>
    <string name="max_prikon">Max. příkon:</string>
    <string name="cislo_elektromeru">Číslo elektroměru:</string>
    <string name="cislo_odberneho_místa">Číslo odběrného místa:</string>
    <string name="_3">3</string>
    <string name="_1">1</string>
    <string name="_25">25</string>
    <string name="_0">0</string>
    <string name="upravit_odberne_misto">Upravit odběrné místo</string>
    <string name="smazat_odberne_misto">Smazat odběrné místo</string>
    <string name="smazat_odberne_misto2">Smazat odběrné místo?</string>
    <string name="create_place">Vytvořte nové odběrné místo \n nebo jej vyberte ze seznamu</string>
    <string name="kc">Kč</string>
    <string name="ok">OK</string>
    <string name="to_settings">Přejít na nastavení</string>
    <string name="datum">Datum:</string>
    <string name="tarif">Tarif:</string>
    <string name="pomlcky">========</string>
    <string name="zalohy">Záloha</string>
    <string name="pridejte_mesicni_odecty">Přidejte měsíční odečty</string>
    <string name="regul_alert">Období obsahuje zastropované i nezastropované ceny</string>
    <string name="new_meter">Byla provedena výměna elektroměru</string>
    <string name="alert">Varování nekonzistence dat</string>
    <string name="alert_date_price_list">Pro období je použitý neplatný ceník</string>
    <string name="insert_to_new_invoice">Vložit do nové faktury</string>
    <string name="pridatZalohu">Přidat zálohu do seznamu plateb Fakturace</string>
    <string name="backup">Vytvoř zálohu</string>
    <string name="select_folder">Vyber složku</string>
    <string name="dashboard">Přehled</string>
    <string name="compare_price_list">Porovnání ceníků</string>
    <string name="price_lists">Ceníky</string>
    <string name="month_reads">Měsíční odečty</string>
    <string name="subscription_points">Odběrná místa</string>
    <string name="invoices">Fakturace</string>
    <string name="hdo_times">Časy HDO</string>
    <string name="backup1">Záloha místní</string>
    <string name="google_drive">Záloha Google</string>
    <string name="graph_month">Graf spotřeby</string>
    <string name="graph_color">Barva tarifu</string>
    <string name="import_price_list">Import ceníků</string>
    <string name="export_price_list">Export ceníků</string>
    <string name="help">Nápověda</string>
    <string name="about_me">O aplikaci</string>
    <string name="select_codes">Vyberte skupinu kódů</string>
    <string name="exception_area">Výjimky ve vašem okrese:</string>
    <string name="switch_exception_area">Výjimka se mě netýká</string>
    <string name="select_subscription_point">Vyberte odběrné místo</string>
    <string name="button_subscription_point_1">Vybere první odběrné místo</string>
    <string name="button_subscription_point_2">Vybere druhé odběrné místo</string>
    <string name="button_subscription_point_3">Vybere třetí odběrné místo</string>
    <string name="button_subscription_point_4">Vybere čtvrté odběrné místo</string>
    <string name="ask_permition">Vyberte složku pro zálohy odečtů a ceníků.</string>
    <string name="description_import">Seznam ceníku připravených k vložení do aplikace</string>
    <string name="description_list_price_list">Seznam ceníků</string>
    <string name="description_list_price_product">Seznam názvů sazeb</string>
    <string name="description_list_price_sazba">Seznam sazeb</string>
    <string name="description_list_price_company">Seznam dodavatelů</string>
    <string name="description_list_price_area">Seznam distribučního území</string>
    <string name="description_list_price_from">Začátek platnosti ceníku</string>
    <string name="description_list_price_to">Konec platnosti ceníku</string>
    <string name="delete_selected_backups_button_default">Smaž vybrané</string>
    <string name="upload_selected_backups_button">Odeslat na Google Drive</string>
    <string name="more">Více možností</string>
    <string name="rate_app">Ohodnotit aplikaci</string>
</resources>