<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_action_backup_create"
        android:icon="@drawable/ic_backup_to_tray"
        android:title="@string/backup"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_action_backup_select_folder"
        android:icon="@drawable/ic_folder_24"
        android:title="@string/select_folder"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_action_backup_delete_selected"
        android:icon="@drawable/ic_delete_24"
        android:title="@string/delete_selected_backups_button_default"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_action_backup_upload_selected"
        android:icon="@android:drawable/stat_sys_upload"
        android:title="@string/upload_selected_backups_button"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_action_toast_menu"
        android:icon="@drawable/ic_dots_vertical_24"
        android:title="@string/more"
        app:showAsAction="always" />

</menu>
