<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvTitleComparePriceList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/sp_produktova_rada" />

        <Spinner
            android:id="@+id/spRada"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTitleComparePriceList"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/description_list_price_list"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/tvProdukt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/spRada"
            android:text="@string/sp_produkt" />

        <Spinner
            android:id="@+id/spProdukt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvProdukt"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/description_list_price_product"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/tvSazba"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/spProdukt"
            android:text="@string/sazba_distribuce" />

        <Spinner
            android:id="@+id/spSazba"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvSazba"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/description_list_price_sazba"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/tvDodavatel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/spSazba"
            android:text="@string/sp_dodavatele" />

        <Spinner
            android:id="@+id/spCompany"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvDodavatel"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/description_list_price_company"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/tvUzemi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/spCompany"
            android:text="@string/sp_distribucni_uzemí" />

        <Spinner
            android:id="@+id/spArea"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvUzemi"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/description_list_price_area"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/spArea"
            android:text="@string/sp_datum_platnosti" />
        <LinearLayout
            android:id="@+id/llDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/tvDate">

            <Spinner
                android:id="@+id/spDatumStart"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/description_list_price_from"
                android:minHeight="48dp" />

            <Spinner
                android:id="@+id/spDatumEnd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/description_list_price_to"
                android:minHeight="48dp" />
        </LinearLayout>


        <Button
            android:id="@+id/btnResetFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="false"
            android:layout_alignParentStart="false"
            android:layout_below="@id/llDate"
            android:layout_centerHorizontal="true"
            android:maxWidth="320dp"
            android:text="@string/filtr_reset" />

    </RelativeLayout>



</ScrollView>
