<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/meni_prices"
        android:title="@string/price_lists"
        android:visible="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_price_list"/>

    <item
        android:id="@+id/meni_monthly_readings"
        android:title="@string/month_reads"
        android:visible="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_monthly_reading"/>

    <item
        android:id="@+id/meni_subscription_points"
        android:title="@string/subscription_points"
        android:visible="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_subscription_point"/>

    <item
        android:id="@+id/meni_invoice"
        android:title="@string/invoices"
        android:visible="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_auto_stories_24"/>

    <item
        android:id="@+id/meni_nothing"
        android:visible="false"
        app:showAsAction="always"/>


</menu>