<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvDescriptionPermission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/ask_permition" />

    <Button
        android:id="@+id/btnSelectFolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvDescriptionPermission"
        android:layout_centerHorizontal="true"
        android:text="@string/select_folder" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewImportExport"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/description_import"
        android:layoutAnimation="@anim/layout_animation_fall_down" />

    <include layout="@layout/layout_progress_bar" />


</RelativeLayout>